added file to git ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,10 @@ sysinfo.txt
 /Logs/Packages-Update.log
 /Packages/manifest.json
 /.idea
+/Assets/Scripts/.idea/.idea.Scripts.dir/.idea/workspace.xml
+/Assets/Scripts/.idea/.idea.Scripts.dir/.idea/contentModel.xml
+/Assets/Scripts/.idea/.idea.Scripts.dir/.idea/indexLayout.xml
+/Assets/Scripts/.idea/.idea.Scripts.dir/.idea/modules.xml
+/Assets/Scripts/.idea/.idea.Scripts.dir/.idea/projectSettingsUpdater.xml
+/Assets/Scripts/.idea/.idea.Scripts.dir/.idea/vcs.xml
+/Assets/Scripts/.idea/.idea.Scripts.dir/riderModule.iml
